# samples

./: CMakeLists.txt
riotclient/: AvahiClient.cpp  AvahiClient.h  CMakeLists.txt  RIoTConnector.cpp  RIoTControl.cpp  RIoTControl.h
riotdeamon/: CMakeLists.txt  RIoTDaemon.cpp  riotdaemon.cpp
xmlvalidator/: CMakeLists.txt  Validator.cpp
