cmake_minimum_required(VERSION 3.10)
set(CMAKE_VERBOSE_MAKEFILE ON)
project(RiotDeamon)
set (RIOT_DAEMON RIoTDaemon)

find_path(RTMESSAGE_API_HEADER REQUIRED NAMES rtMessage.h HINTS ~/rbus/install/usr/include PATH_SUFFIXES rtmessage)

if (NOT ${RTMESSAGE_API_HEADER} STREQUAL "RTMESSAGE_API_HEADER-NOTFOUND")
        message("Found rtMessage.h ${RTMESSAGE_API_HEADER}")
        set(RTMESSAGE_API_HEADERS ${RTMESSAGE_API_HEADER})
endif()

find_library(RTMESSAGE_LIBRARY REQUIRED HINTS ~/rbus/install/usr/lib NAMES rtMessage)
set(RTMESSAGE_LIBRARIES "")
if (NOT ${RTMESSAGE_LIBRARY} STREQUAL "RTMESSAGE_LIBRARY-NOTFOUND")
        set(RTMESSAGE_LIBRARIES ${RTMESSAGE_LIBRARY})
endif()

add_executable(${RIOT_DAEMON} RIoTDaemon.cpp)
target_include_directories(${RIOT_DAEMON} PRIVATE  ${RTMESSAGE_API_HEADERS})
target_link_libraries(${RIOT_DAEMON} PRIVATE  ${RTMESSAGE_LIBRARIES} pthread)

set_source_files_properties(RIoTDaemon.cpp PROPERTIES COMPILE_FLAGS "-fpermissive")

install(TARGETS ${RIOT_DAEMON}  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDR})
